# docs/swagger.yaml
@@ -148,6 +148,10 @@ definitions:
         items:
           $ref: '#/definitions/models.ProjectProponent'
         type: array
+      projectSdgs:
+        items:
+          $ref: '#/definitions/models.ProjectSdg'
+        type: array
       proponentID:
         type: integer
       updatedAt:
@@ -170,6 +174,21 @@ definitions:
       updatedAt:
         type: string
     type: object
+  models.ProjectSdg:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      projectID:
+        type: integer
+      sdgID:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
   models.Proponent:
     properties:
       createdAt:
@@ -186,6 +205,23 @@ definitions:
         items:
           $ref: '#/definitions/models.Project'
         type: array
+      updatedAt:
+        type: string
+    type: object
+  models.Sdg:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      iconURL:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      number:
+        type: integer
       updatedAt:
         type: string
     type: object
@@ -1110,4 +1146,152 @@ paths:
       summary: Update Proponent
       tags:
       - proponent
+  /sdg/:
+    get:
+      description: Retrieves every sdg
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Sdg deleted successfully
+          schema:
+            type: boolean
+        "404":
+          description: Sdg not found
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      summary: Gets all Sdgs
+      tags:
+      - sdg
+  /sdg/{id}:
+    get:
+      description: Retrieves a sdg by ID
+      parameters:
+      - description: Sdg ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Sdg'
+        "400":
+          description: SdgID not found
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "404":
+          description: Sdg not found
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      summary: Get Sdg
+      tags:
+      - sdg
+  /sdg/create:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new sdg
+      parameters:
+      - description: Sdg details
+        in: body
+        name: sdg
+        required: true
+        schema:
+          $ref: '#/definitions/models.Sdg'
+      produces:
+      - application/json
+      responses:
+        "202":
+          description: Sdg created successfully
+          schema:
+            type: boolean
+        "400":
+          description: Invalid JSON or bad request
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      summary: Create Sdg
+      tags:
+      - sdg
+  /sdg/delete/{id}:
+    delete:
+      description: Deletes a sdg by ID
+      parameters:
+      - description: Sdg ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Sdg deleted successfully
+          schema:
+            type: boolean
+        "400":
+          description: SdgID not found
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "404":
+          description: Sdg not found
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      summary: Delete Sdg
+      tags:
+      - sdg
+  /sdg/update/{id}:
+    patch:
+      consumes:
+      - application/json
+      description: Updates an existing sdg by ID
+      parameters:
+      - description: Sdg ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Sdg details to update
+        in: body
+        name: sdg
+        required: true
+        schema:
+          $ref: '#/definitions/models.Sdg'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Sdg'
+        "400":
+          description: Invalid JSON or SdgID not found
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "404":
+          description: Sdg not found
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/utils.ErrorResponse'
+      summary: Update Sdg
+      tags:
+      - sdg
 swagger: "2.0"
