# internal/models/project_sdg.go
@@ -1,0 +1,9 @@
+package models
+
+import "gorm.io/gorm"
+
+type ProjectSdg struct {
+	gorm.Model
+	ProjectID uint
+	SdgID     uint
+}
